feat: new version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Trò chơi shogi của quỷ</title>
     <meta charset="UTF-8">
-    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta name="keywords" content="truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei">
@@ -42,16 +41,11 @@
       <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
     <link rel="canonical" href="https://vi.komayo.page/">
-    <meta name="application-name" content="Komayo">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#fff">
-    <meta name="theme-color" content="#fff">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="css/pico.classless.min.css">
+    <link rel="stylesheet" href="css/all.css" media="all">
+    <link rel="stylesheet" href="css/screen.css" media="screen">
+    <link rel="stylesheet" href="css/print.css" media="print">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -69,54 +63,49 @@
         "keywords": "truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei"
       }
     </script>
-    <style>
-      p {
-        text-align: justify;
-      }
-    </style>
   </head>
   <body>
-    <main>
-      <nav>
-  <ul>
-      <li><strong><ruby lang="ja">駒妖<rt lang="vi">Komayo</rt></ruby></strong></li>
-  </ul>
-  <ul>
-    <li><a href="#" aria-current="page">Truyền thuyết đô thị</a></li>
-  </ul>
-</nav>
-<article>
+    <article>
   <header>
-    <h1>Trò chơi shogi của quỷ</h1>
+    <h1>
+      <img
+        src="komayo.svg"
+        alt="Komayō"
+        title="Komayo">
+    </h1>
+
+    <h2>
+      Truyền thuyết đô thị
+    </h2>
+
     <p>Người ta kể rằng ở Nhật Bản, vùng Kansai, khi trăng tròn chiếu sáng trên bầu trời cao, <strong>một sinh vật có bùa mê</strong> xuất hiện, tìm cách thu hút những người qua đường bị lạc.</p>
 
   </header>
+
   <p>Xinh đẹp và bí ẩn, <em>Komayo quyến rũ những kẻ bất hạnh</em> bằng sức quyến rũ khó cưỡng của mình. Sau đó, cô mời họ chơi <dfn title="trò chơi của vua">ogi</dfn>, một biến thể của <em title="cờ tướng">cờ vua truyền thống của Nhật Bản</em>. Những người chấp nhận lời mời của cô ấy sẽ sớm thấy mình bị cuốn vào vòng xoáy của trò chơi ly kỳ.</p>
+
 
   <picture>
     <source type="image/webp" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <source type="image/png" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.png">
+
     <img
-      alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy."
       src="komayo-m-m-c-i-v-i-k-thu-dang-ng.png"
+      alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy."
+      title="Trò chơi Ōgi quyến rũ của Komayō và giấc ngủ sâu không thể tránh khỏi"
       height="1024"
-      width="1024" />
+      width="1024">
   </picture>
+
   <p>Tuy nhiên, khi trò chơi tiếp tục, họ bắt đầu cảm thấy một sự mệt mỏi kỳ lạ ngấm dần vào xương, cuối cùng buộc họ phải chìm vào giấc ngủ không thể giải thoát được.</p>
 
+
   <footer>
-      <p>Chính trong giấc ngủ say này, Komayo đã bộc lộ bản chất thật của mình. Cô ấy hấp thụ năng lượng quan trọng của họ, chỉ để lại một lớp vỏ trống rỗng của sức sống trước đây của cô ấy. Linh hồn của những nạn nhân bất hạnh này, giờ đã biến thành <em>yurei</em>, bị kết án trong một cuộc hành trình bất tận. Bị dằn vặt bởi mong muốn không thể cưỡng lại được gặp lại Komayo và hy vọng hoàn thành trò chơi ogi còn dang dở của mình, họ lang thang mãi mãi trong trạng thái khao khát không được thỏa mãn và hối tiếc không được thỏa mãn.</p>
+    <p>Chính trong giấc ngủ say này, Komayo đã bộc lộ bản chất thật của mình. Cô ấy hấp thụ năng lượng quan trọng của họ, chỉ để lại một lớp vỏ trống rỗng của sức sống trước đây của cô ấy. Linh hồn của những nạn nhân bất hạnh này, giờ đã biến thành <em>yurei</em>, bị kết án trong một cuộc hành trình bất tận. Bị dằn vặt bởi mong muốn không thể cưỡng lại được gặp lại Komayo và hy vọng hoàn thành trò chơi ogi còn dang dở của mình, họ lang thang mãi mãi trong trạng thái khao khát không được thỏa mãn và hối tiếc không được thỏa mãn.</p>
 
-    </footer>
-  </article>
 
-    </main>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('service-worker.js');
-        });
-      }
-    </script>
+  </footer>
+</article>
+
   </body>
 </html>
