feat: new version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" dir="ltr" itemscope itemtype="http://schema.org/Article">
+<html lang="vi" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
   <head>
     <title>Trò chơi shogi của quỷ</title>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta name="keywords" content="truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei">
     <meta property="og:title" content="Trò chơi shogi của quỷ">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="book">
     <meta property="og:url" content="https://vi.komayo.page/">
     <meta property="og:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <meta property="og:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
