feat: new version

--- a/index.html
+++ b/index.html
@@ -64,19 +64,28 @@
       }
     </script>
   </head>
+
   <body>
-    <article>
-  <header>
-    <h1>
+    <header>
       <img
         src="komayo.svg"
         alt="Komayō"
         title="Komayo">
-    </h1>
+    </header>
 
-    <h2>
+    <nav>
+      <ul>
+        <li><a href="https://vi.komayo.page/">Truyền thuyết đô thị</a></li>
+
+
+      </ul>
+    </nav>
+
+    <article>
+  <header>
+    <h1>
       Truyền thuyết đô thị
-    </h2>
+    </h1>
 
     <p>Người ta kể rằng ở Nhật Bản, vùng Kansai, khi trăng tròn chiếu sáng trên bầu trời cao, <strong>một sinh vật có bùa mê</strong> xuất hiện, tìm cách thu hút những người qua đường bị lạc.</p>
 
@@ -107,5 +116,9 @@
   </footer>
 </article>
 
+
+    <footer>
+      &copy; 2023 Cyril Veltin
+    </footer>
   </body>
 </html>
