--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="vi" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
   <head>
     <title>Trò chơi shogi của quỷ</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta name="keywords" content="truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Cyril Veltin">
     <meta property="og:title" content="Trò chơi shogi của quỷ">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://vi.komayo.page/">
@@ -18,6 +21,7 @@
     <meta name="twitter:title" content="Trò chơi shogi của quỷ">
     <meta name="twitter:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta name="twitter:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
@@ -42,10 +46,18 @@
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
     <link rel="canonical" href="https://vi.komayo.page/">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
-    <meta name="robots" content="index, follow">
+
+    <style media="screen">
+      :root {
+        --article-title-text-color: #f6cfe9;
+        --article-title-shadow-color: #58354d;
+      }
+    </style>
+
     <link rel="stylesheet" href="css/all.css" media="all">
-    <link rel="stylesheet" href="css/screen.css" media="screen">
     <link rel="stylesheet" href="css/print.css" media="print">
+    <link rel="stylesheet" href="css/screen.css" media="screen">
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -72,6 +84,13 @@
         alt="Komayō"
         title="Komayo">
     </header>
+
+    <nav>
+      <a href="recits/rencontre-au-bar-de-la-regence/"><img src="recits/rencontre-au-bar-de-la-regence/favicon.svg" alt="Episode 1" title="Rencontre au Bar de la Régence"></a>
+      <a href="recits/l-orgueil-ou-l-ame-du-champion/"><img src="recits/l-orgueil-ou-l-ame-du-champion/favicon.svg" alt="Episode 2" title="L'orgueil ou l'âme du Champion"></a>
+      <a href="recits/l-amour-sous-les-cerisiers/"><img src="recits/l-amour-sous-les-cerisiers/favicon.svg" alt="Episode 3" title="L'Amour sous les cerisiers"></a>
+      <a href="recits/le-souffle-du-renard/"><img src="recits/le-souffle-du-renard/favicon.svg" alt="Episode 4" title="Le Souffle du Renard"></a>
+    </nav>
 
     <article>
   <h1>
