--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:title" content="Trò chơi shogi của quỷ">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+    <meta property="og:image" content="https://vi.komayo.page/img/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <meta property="og:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta itemprop="name" content="Trò chơi shogi của quỷ">
     <meta itemprop="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
-    <meta itemprop="image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+    <meta itemprop="image" content="https://vi.komayo.page/img/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Trò chơi shogi của quỷ">
     <meta name="twitter:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
-    <meta name="twitter:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
 
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -88,7 +88,7 @@
         "inLanguage": "vi",
         "headline": "Trò chơi shogi của quỷ",
         "description": "Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.",
-        "image": "https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp",
+        "image": "https://vi.komayo.page/img/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp",
         "datePublished": "2023-06-26",
         "dateModified": "2023-06-26",
         "keywords": "truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei"
@@ -119,11 +119,13 @@
 
 
   <picture>
-    <source type="image/webp" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
-    <source type="image/png" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.png">
+    <source type="image/webp" srcset="img/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+    <source type="image/png" srcset="img/komayo-m-m-c-i-v-i-k-thu-dang-ng.png">
 
     <img
-      src="komayo-m-m-c-i-v-i-k-thu-dang-ng.png"
+      decoding="async"
+      loading="lazy"
+      src="img/komayo-m-m-c-i-v-i-k-thu-dang-ng.png"
       alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy."
       title="Trò chơi Ōgi quyến rũ của Komayō và giấc ngủ sâu không thể tránh khỏi"
       height="1024"
