feat: new version

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
     <img
       src="img/komayo-1024x1024.jpg"
-      alt="Komayō"
-      title="Komayo"
+      alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy."
+      title="Trò chơi Ōgi quyến rũ của Komayō và giấc ngủ sâu không thể tránh khỏi"
       height="1024"
       width="1024">
   </picture>
