--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
           "@type": "WebPage",
           "@id": "https://vi.komayo.page/"
         },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Sashité",
+          "url": "https://sashite.com/"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
         "inLanguage": "vi",
         "headline": "Trò chơi shogi của quỷ",
         "description": "Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.",
