feat: new version

--- a/index.html
+++ b/index.html
@@ -1,51 +1,144 @@
-Puma caught this error: Error loading the 'sqlite3' Active Record adapter. Missing a gem it depends on? can't activate sqlite3 (~> 1.4), already activated sqlite3-2.0.3-arm64-darwin. Make sure all dependencies are added to Gemfile. (LoadError)
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/bundler-2.5.5/lib/bundler/rubygems_integration.rb:237:in `block (2 levels) in replace_gem'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/connection_adapters/sqlite3_adapter.rb:14:in `<top (required)>'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/3.3.0/bundled_gems.rb:74:in `require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/3.3.0/bundled_gems.rb:74:in `block (2 levels) in replace_require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/zeitwerk-2.6.17/lib/zeitwerk/kernel.rb:34:in `require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/connection_adapters/abstract/connection_handler.rb:333:in `resolve_pool_config'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/connection_adapters/abstract/connection_handler.rb:134:in `establish_connection'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/connection_handling.rb:53:in `establish_connection'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/railtie.rb:304:in `block (2 levels) in <class:Railtie>'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:97:in `class_eval'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:97:in `block in execute_hook'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:87:in `with_execution_control'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:92:in `execute_hook'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:78:in `block in run_load_hooks'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:77:in `each'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/lazy_load_hooks.rb:77:in `run_load_hooks'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/base.rb:338:in `<module:ActiveRecord>'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/base.rb:15:in `<top (required)>'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/3.3.0/bundled_gems.rb:74:in `require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/3.3.0/bundled_gems.rb:74:in `block (2 levels) in replace_require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/zeitwerk-2.6.17/lib/zeitwerk/kernel.rb:34:in `require'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activerecord-7.1.3.4/lib/active_record/query_cache.rb:29:in `run'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/execution_wrapper.rb:29:in `before'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:426:in `block in make_lambda'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:202:in `block (2 levels) in halting'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:707:in `block (2 levels) in default_terminator'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:706:in `catch'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:706:in `block in default_terminator'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:203:in `block in halting'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:598:in `block in invoke_before'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:598:in `each'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:598:in `invoke_before'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/callbacks.rb:109:in `run_callbacks'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/execution_wrapper.rb:129:in `run'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/execution_wrapper.rb:125:in `run!'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/execution_wrapper.rb:78:in `block in run!'
-<internal:kernel>:90:in `tap'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/activesupport-7.1.3.4/lib/active_support/execution_wrapper.rb:75:in `run!'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/actionpack-7.1.3.4/lib/action_dispatch/middleware/executor.rb:12:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/actionpack-7.1.3.4/lib/action_dispatch/middleware/static.rb:25:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/rack-3.1.7/lib/rack/sendfile.rb:114:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/actionpack-7.1.3.4/lib/action_dispatch/middleware/host_authorization.rb:141:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/railties-7.1.3.4/lib/rails/engine.rb:536:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/configuration.rb:272:in `call'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/request.rb:100:in `block in handle_request'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/thread_pool.rb:378:in `with_force_shutdown'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/request.rb:99:in `handle_request'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/server.rb:464:in `process_client'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/server.rb:245:in `block in run'
-/Users/cyril/.rbenv/versions/3.3.4/lib/ruby/gems/3.3.0/gems/puma-6.4.2/lib/puma/thread_pool.rb:155:in `block in spawn_thread'
+<!DOCTYPE html>
+<html lang="vi" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
+  <head>
+    <title>Trò chơi shogi của quỷ</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
+    <meta name="keywords" content="câu chuyện, ma, Komayō, obake, ōgi, shōgi, yōkai, yūrei">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Cyril Veltin">
+    <meta property="og:title" content="Trò chơi shogi của quỷ">
+    <meta property="og:type" content="book">
+    <meta property="og:url" content="https://vi.komayo.page/">
+    <meta property="og:image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
+    <meta property="og:description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
+    <meta itemprop="name" content="Trò chơi shogi của quỷ">
+    <meta itemprop="description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
+    <meta itemprop="image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Trò chơi shogi của quỷ">
+    <meta name="twitter:description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
+    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
+
+      <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
+      <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
+      <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
+      <link rel="alternate" hreflang="fr" href="https://fr.komayo.page/">
+      <link rel="alternate" hreflang="gu" href="https://gu.komayo.page/">
+      <link rel="alternate" hreflang="hi" href="https://hi.komayo.page/">
+      <link rel="alternate" hreflang="id" href="https://id.komayo.page/">
+      <link rel="alternate" hreflang="ja" href="https://ja.komayo.page/">
+      <link rel="alternate" hreflang="jv" href="https://jv.komayo.page/">
+      <link rel="alternate" hreflang="kn" href="https://kn.komayo.page/">
+      <link rel="alternate" hreflang="ko" href="https://ko.komayo.page/">
+      <link rel="alternate" hreflang="lo" href="https://lo.komayo.page/">
+      <link rel="alternate" hreflang="ml" href="https://ml.komayo.page/">
+      <link rel="alternate" hreflang="mr" href="https://mr.komayo.page/">
+      <link rel="alternate" hreflang="my" href="https://my.komayo.page/">
+      <link rel="alternate" hreflang="or" href="https://or.komayo.page/">
+      <link rel="alternate" hreflang="pa" href="https://pa.komayo.page/">
+      <link rel="alternate" hreflang="ta" href="https://ta.komayo.page/">
+      <link rel="alternate" hreflang="te" href="https://te.komayo.page/">
+      <link rel="alternate" hreflang="th" href="https://th.komayo.page/">
+      <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
+      <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
+    <link rel="canonical" href="https://vi.komayo.page/">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
+
+    <style media="screen">
+      @media (prefers-color-scheme: light) {
+        :root {
+          --background-color: white;
+          --color: black;
+          --link-color: #6d071a;
+          --quote-color: #6d071a;
+          --shadow-color: #ccc;
+          --article-title-text-color: #000;
+          --article-title-shadow-color: #ccc;
+        }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --background-color: black;
+          --color: white;
+          --link-color: #e37f98;
+          --quote-color: #e37f98;
+          --shadow-color: #58354d;
+          --article-title-text-color: #fff;
+          --article-title-shadow-color: #333;
+        }
+      }
+    </style>
+
+    <link rel="stylesheet" href="css/all.css" media="all">
+    <link rel="stylesheet" href="css/print.css" media="print">
+    <link rel="stylesheet" href="css/screen.css" media="screen">
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ShortStory",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://vi.komayo.page/"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Sashité",
+          "url": "https://sashite.com/"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
+        "inLanguage": "vi",
+        "headline": "Trò chơi shogi của quỷ",
+        "description": "Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.",
+        "image": "https://vi.komayo.page/img/komayo-1024x1024.webp",
+        "datePublished": "2023-06-26",
+        "dateModified": "2023-06-26",
+        "keywords": "câu chuyện, ma, Komayō, obake, ōgi, shōgi, yōkai, yūrei"
+      }
+    </script>
+  </head>
+
+  <body>
+    <header>
+      <picture>
+        <source srcset="komayo-light.svg" media="(prefers-color-scheme: light)">
+        <img
+          src="komayo-dark.svg"
+          alt="Komayō"
+          title="Komayō"
+          height="22"
+          width="92">
+      </picture>
+    </header>
+
+    <article>
+  <h1>
+    Truyền thuyết đô thị
+  </h1>
+
+  <p>Ở vùng nông thôn xa xôi của Nhật Bản, có những câu chuyện kể về một người phụ nữ xinh đẹp đầy ám ảnh lang thang dưới ánh trăng. Một số người, bằng giọng thì thầm, dám gọi cô là Komayō. Những câu chuyện hiếm hoi về cô, được bao phủ trong bí ẩn, nói về một nhân vật duyên dáng trong bộ kimono màu xanh nửa đêm, xuất hiện trước những du khách cô đơn, như thể bị thu hút bởi sự cô đơn của họ. Một số người cho rằng cô thách thức họ chơi một trò chơi cổ xưa, với những quy tắc đã bị lãng quên theo thời gian, tương tự như shogi. Người ta nói rằng những người chấp nhận lời mời này sẽ được tìm thấy vào ngày hôm sau với một nụ cười kỳ lạ trên khuôn mặt, một bàn cờ bên cạnh, tâm trí của họ dường như bị lạc, bị một bí ẩn không thể dò được.</p>
+
+
+  <picture>
+    <source type="image/webp" srcset="img/komayo-512x512.webp" media="(max-width: 512px)" height="512" width="512">
+    <source type="image/webp" srcset="img/komayo-1024x1024.webp" media="(min-width: 512px)" height="1024" width="1024">
+
+    <img
+      src="img/komayo-1024x1024.jpg"
+      alt="Komayō, mỉm cười, đứng cạnh một đối thủ kiệt sức đã ngủ thiếp đi bên cạnh bàn cờ ōgi."
+      title="Trò chơi ōgi mê hoặc của Komayō và vòng xoáy của giấc ngủ không thể cưỡng lại"
+      height="1024"
+      width="1024">
+  </picture>
+</article>
+
+
+  </body>
+</html>
